
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="#FFFFFF"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#102D69"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/header"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#102D69"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/footer"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    
     <ScrollView 
     
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@id/footer"
      android:layout_below="@id/header">
        

    
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >
        
        
        <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
        
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/pantalla_principal"
       android:textColor="#000000"
       android:textSize="20sp" />
   
   <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
   
   <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/info3"
            android:textColor="#000000"
             />
   
   
   <View
    android:layout_width="fill_parent"
    android:layout_height="2dip"
    android:background="#000000" />
   
    <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
        
  

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/bordelista" 
         >
        
    </ListView>
    
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
   
   
   <View
    android:layout_width="fill_parent"
    android:layout_height="2dip"
    android:background="#000000" />
   
    <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btnAgregarV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" 
            android:onClick="clickBotonAgregar"/>
        

    </LinearLayout>
    
     <View
    android:layout_width="fill_parent"
    android:layout_height="10dip"
    android:background="#FFFFFF" />
    
     <View
    android:layout_width="fill_parent"
    android:layout_height="2dip"
    android:background="#000000" />
     
     <TextView
       android:id="@+id/txtMensaje2"  
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/picoyplaca"
       android:textColor="#000000"
       android:textSize="18sp"
       android:visibility="invisible" />
    
     <TableLayout
         android:id="@+id/tabla1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:visibility="invisible"
        >
        
       <TableRow android:id="@+id/tableRow1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="5dp" 
       android:gravity="center"
       android:background="@drawable/bordebotones">
         
       <TextView
       android:id="@+id/Lunes"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/lunes"
       android:textColor="#000000"
       android:textSize="20sp"
        />
       
       <TextView
       android:id="@+id/Martes"    
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/martes"
       android:textColor="#000000"
       android:textSize="20sp" />
       
       <TextView
       android:id="@+id/Miercoles"    
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/miercoles"
       android:textColor="#000000"
       android:textSize="20sp" />
       
       <TextView
       android:id="@+id/Jueves"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/jueves"
       android:textColor="#000000"
       android:textSize="20sp" />
       
       <TextView
       android:id="@+id/Viernes"    
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/viernes"
       android:textColor="#000000"
       android:textSize="18sp" />
       
       </TableRow>

     </TableLayout>
    
   <TextView
       android:id="@+id/txtMensaje1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:gravity="center"
       android:text="@string/mensajesemergentes"
       android:textColor="#000000"
       android:textSize="20sp"
       android:visibility="invisible" />

   
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        >

       <RadioGroup
         
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rbOpciones"
        android:checkedButton="@+id/diantes" 
        android:visibility="invisible">
       
           <RadioButton 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:id="@+id/diantes"
        	android:text="@string/undiantes" />
           
           <RadioButton 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:id="@+id/mismodia"
        	android:text="@string/mismodia" />
           
           
        </RadioGroup>
        

    </LinearLayout>
   
   
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        
        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" 
            android:onClick="clickGuardarCambios"
            android:visibility="invisible"
            />
   
   </LinearLayout>
   
    </LinearLayout>
    
    
    </ScrollView>

    </RelativeLayout>